--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #000000;
   color: #ffffff;
+  cursor: none;
 }
 
 @layer utilities {
